# tgbot_validator

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: master-release.yml
include/tgbot-validator/: ErrorCode.hpp  StateMachineValidator.hpp  StateNode.hpp  ValidationIssue.hpp  ValidationResult.hpp
src/: ErrorCode.cpp  StateMachineValidator.cpp  ValidationIssue.cpp  ValidationResult.cpp  main.cpp
tests/: CMakeLists.txt  smoke_test.cpp
